--- a/src/WebApp/Views/App.cshtml
+++ b/src/WebApp/Views/App.cshtml
@@ -1,14 +1,14 @@
 ﻿@using InertiaCore
+@using InertiaCore.Utils
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title inertia>OliveBranch</title>
-    <link rel="stylesheet" href="/css/app.css" asp-append-version="true">
 </head>
 <body class="h-full bg-gray-900">
 @await Inertia.Html(Model)          
-<script src="/js/app.js" asp-append-version="true"></script>
+@Vite.Input("Frontend/js/app.js")
 </body>
 </html>
